--- a/android/SDL2_GradleApp/app/src/main/AndroidManifest.xml
+++ b/android/SDL2_GradleApp/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
           android:versionName="1.0">
   <application
       android:allowBackup="false"
-      android:label="@string/app_name">
+      android:label="@string/app_name"
+	  android:icon="@mipmap/ic_launcher">
     <activity android:name=".SDL2_GradleApp"
               android:label="@string/app_name">
       <intent-filter>
