--- a/android/main.vcxproj
+++ b/android/main.vcxproj
@@ -228,6 +228,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\external\SDL\src\main\android\SDL_android_main.c" />
+    <ClCompile Include="..\SweetCrush\gameData\Levels.cpp" />
     <ClCompile Include="..\SweetCrush\src\Actions.cpp" />
     <ClCompile Include="..\SweetCrush\src\AssetDefs.cpp" />
     <ClCompile Include="..\SweetCrush\src\Board.cpp" />
@@ -236,9 +237,9 @@
     <ClCompile Include="..\SweetCrush\src\CreditsScreen.cpp" />
     <ClCompile Include="..\SweetCrush\src\Game.cpp" />
     <ClCompile Include="..\SweetCrush\src\GameCompletePanel.cpp" />
+    <ClCompile Include="..\SweetCrush\src\GameDataModule.cpp" />
     <ClCompile Include="..\SweetCrush\src\GameOverScreen.cpp" />
     <ClCompile Include="..\SweetCrush\src\LevelCompletePanel.cpp" />
-    <ClCompile Include="..\SweetCrush\src\Levels.cpp" />
     <ClCompile Include="..\SweetCrush\src\Localization.cpp" />
     <ClCompile Include="..\SweetCrush\src\main.cpp" />
     <ClCompile Include="..\SweetCrush\src\MainScreen.cpp" />
