--- a/android/main.vcxproj.filters
+++ b/android/main.vcxproj.filters
@@ -49,9 +49,6 @@
     <ClCompile Include="..\SweetCrush\src\GameOverScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\SweetCrush\src\Levels.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\SweetCrush\src\GameCompletePanel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -62,6 +59,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\external\SDL\src\main\android\SDL_android_main.c" />
+    <ClCompile Include="..\SweetCrush\src\GameDataModule.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\SweetCrush\gameData\Levels.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
